public/css/style.css
body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   max-width: 500px;
   margin: auto;
}

a {
   color: #00B7FF;
}

/* HEADER */
.header {
   height: 42px;
   margin-bottom: 20px;
   text-align: center;
   padding: 10px;

   border: 1px solid black;
   border-top: 0;
}

.menu {
   float: left;
   width: 30%;
   text-align: left;
}

.logo {
   float: left;
   width: 40%;
   font-size: 18px;
   text-align: center;
}

.profile-link {
   float: left;
   width: 30%;
   text-align: right;
}

/* CREATE POST */
.create-post {
   border: 1px solid black;
   margin-bottom: 20px;
}

.create-post input, .create-post textarea {
   display: block;
   margin: 10px auto;
   width: 80%;
}

.post-banner {
   padding: 10px;
   text-align: center;
   cursor: pointer;
   text-transform: uppercase;
}

.post-link {
   font-size: 28px;
}

/* POST */
.post {
   border: 1px solid black;
   padding: 10px;
   margin-bottom: 20px;
}

.post .title {
   text-align: center;
}

